# Nautilus

./: CHANGELOG.md  MANIFEST.in  README.md  fno_momentum_nautilus.py  nautilus_library_test.ipynb  pyproject.toml  run_report.py  test_nautilus.py
Nautilus_Crypto/: README.md  WINDOWS_SETUP.md  build_cpp.sh  main.py  pyproject.toml  requirements.txt  setup.bat  setup.sh
Nautilus_Crypto/cpp/: CMakeLists.txt
Nautilus_Crypto/cpp/include/: ring_buffer.hpp  websocket_client.hpp
Nautilus_Crypto/cpp/src/: bindings.cpp  websocket_client.cpp
Nautilus_Crypto/models/: hmm_model.pkl
Nautilus_Crypto/python/backtest/: engine.py
Nautilus_Crypto/python/core/: data_store.py  features.py  historical.py  hmm_model.py  regime_engine.py  ws_bridge.py
Nautilus_Crypto/python/dashboard/: app.py  app.tcss
Nautilus_Crypto/python/utils/: logging_config.py
Nautilus_Crypto/scripts/: run_backtest.py  run_optimise.py  smoke_test.py
Nautilus_Crypto/tests/: conftest.py  test_features_and_model.py
data/: india_10y_yield.csv  rbi_repo_rate.csv
data/cache/: _caret_NSEI.parquet  rbi_repo_rate_daily.parquet
src/nautilus/: __init__.py  cli.py  config.py
src/nautilus.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/nautilus/backtests/: __init__.py  engine.py
src/nautilus/dashboard/: regime_dashboard.py
src/nautilus/etl/: __init__.py  loader.py  macro.py
src/nautilus/strategies/: __init__.py  momentum.py  regime.py
src/nautilus_regime.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
tests/: test_engine.py
