[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilus"
version = "0.5.0"
description = "India Macro-Momentum Regime Dashboard — 100% free, yfinance-powered"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.1",
    "numpy>=1.26",
    "plotly>=5.20",
    "streamlit>=1.35",
    "hmmlearn>=0.3",
    "scikit-learn>=1.4",
    "requests>=2.31",
    "pyarrow>=15",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "mypy>=1.9",
    "pandas-stubs",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
