[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nautilus-regime"
version = "0.5.5"
description = "India Macro-Momentum Regime Dashboard — 5-state HMM, yfinance-powered, no API key required"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["quantitative-finance", "hmm", "regime", "india", "nifty", "macro", "streamlit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "yfinance>=0.2.40",
    "pandas>=2.1",
    "numpy>=1.26",
    "plotly>=5.20",
    "streamlit>=1.35",
    "hmmlearn>=0.3",
    "scikit-learn>=1.4",
    "requests>=2.31",
    "pyarrow>=15",
    "beautifulsoup4>=4.12",
    "lxml>=5.0",
    "structlog>=24.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.4",
    "pre-commit>=3.7",
    "mypy>=1.9",
    "pandas-stubs",
]

[project.scripts]
nautilus = "nautilus.cli:main"

[project.urls]
Homepage       = "https://github.com/chrislernunes/nautilus"
Documentation  = "https://github.com/chrislernunes/nautilus#readme"
"Bug Tracker"  = "https://github.com/chrislernunes/nautilus/issues"
Changelog      = "https://github.com/chrislernunes/nautilus/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"nautilus.data" = ["*.csv"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "N803", "N806"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts   = "-v --tb=short"

[tool.mypy]
python_version         = "3.10"
ignore_missing_imports = true
