[build-system]
requires = ["setuptools>=68", "pybind11>=2.11"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "nautilus-btc"
version = "1.0.0"
description = "Real-time BTC regime detection dashboard — HMM + C++ ingestion"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scipy>=1.11.0",
    "hmmlearn>=0.3.0",
    "websockets>=12.0",
    "aiohttp>=3.9.0",
    "yfinance>=0.2.36",
    "plotly>=5.18.0",
    "dash>=2.14.0",
    "rich>=13.7.0",
    "pybind11>=2.11.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["python*"]
